[gd_scene load_steps=11 format=2]

[ext_resource path="res://tudo/fonts/BRITANIC.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://tudo/imagens/mapa/Viana.jpg" type="Texture" id=2]
[ext_resource path="res://tudo/Botoes/botao.png" type="Texture" id=3]
[ext_resource path="res://tudo/Botoes/botaoAoClicar.png" type="Texture" id=4]
[ext_resource path="res://tudo/Botoes/BotaoClique.png" type="Texture" id=5]
[ext_resource path="res://script/CIDADE.gd" type="Script" id=6]
[ext_resource path="res://tudo/imagens/sino_azul/sino6azull.png" type="Texture" id=7]
[ext_resource path="res://tudo/fonts/vademecum.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 8 )

[node name="CIDADE" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 223, 55 )
scale = Vector2( 0.497222, 0.472656 )
texture = ExtResource( 2 )
offset = Vector2( -88.4916, 521.521 )

[node name="botao1" type="TextureButton" parent="."]
margin_left = 89.0
margin_top = 11.0
margin_right = 208.0
margin_bottom = 57.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="botao1"]
margin_left = 11.0
margin_top = -3.0
margin_right = 112.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 216, 45 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="botao2" type="TextureButton" parent="."]
margin_left = 223.0
margin_top = 9.0
margin_right = 340.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 1, 2 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="botao2"]
margin_left = 10.0
margin_top = -1.0
margin_right = 98.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="estamos_em" type="Label" parent="."]
margin_left = 74.0
margin_top = 62.0
margin_right = 338.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 2 )
autowrap = true
clip_text = true

[node name="dica1" type="TextureButton" parent="."]
margin_left = 27.0
margin_top = 251.0
margin_right = 104.0
margin_bottom = 313.0
expand = true

[node name="dica2" type="TextureButton" parent="."]
margin_left = 231.0
margin_top = 292.0
margin_right = 297.0
margin_bottom = 361.0
expand = true

[node name="dica3" type="TextureButton" parent="."]
margin_left = 160.0
margin_top = 368.0
margin_right = 224.0
margin_bottom = 430.0
expand = true

[node name="penas" type="Sprite" parent="."]
position = Vector2( 42, 41 )
scale = Vector2( 0.103125, 0.0597656 )
texture = ExtResource( 7 )

[connection signal="pressed" from="botao1" to="." method="_on_botao1_pressed"]
[connection signal="pressed" from="botao2" to="." method="_on_botao2_pressed"]
[connection signal="pressed" from="dica1" to="." method="_on_dica1_pressed"]
[connection signal="pressed" from="dica2" to="." method="_on_dica2_pressed"]
[connection signal="pressed" from="dica3" to="." method="_on_dica3_pressed"]
